# dgemm

./: CMakeLists.txt  benchmark.c
lib/: dgemm-blas.c  dgemm-blocked.c  dgemm-naive.c
